# django-data-warehouse

./: .pre-commit-config.yaml  LICENSE  README.md  manage.py  pyproject.toml
scraper/scraper/: middlewares.py  pipelines.py
spiders/: README.md
spiders/spiders/: pipelines.py  settings.py
spiders/spiders/spiders/: pages.py  sitemap.py
warehouse/: asgi.py  urls.py  wsgi.py
warehouse/core/: admin.py  apps.py  models.py
warehouse/core/management/commands/: build_blocks.py  out_tagmap.py
warehouse/settings/: base.py  dev.py  local_settings.py.example.py
warehouse/sitemap/: admin.py  apps.py  models.py  signatures.py
warehouse/sitemap/migrations/: 0001_initial.py  0002_page_tag_map.py  0002_rename_page_pagedata_rename_urls_sitemapurl_and_more.py  0002_signature.py
warehouse/sitemap/spiders/: README.md
warehouse/sitemap/spiders/spiders/: items.py  middlewares.py  pipelines.py  settings.py
warehouse/sitemap/spiders/spiders/spiders/: sitemap.py
