[tool.poetry]
name = "django-data-warehouse"
version = "0.1.0"
description = "A Django app to store scraped website data"
authors = ["Nick Moreton <nickmoreton@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "~5.0"
scrapy = "~2.11.0"


[tool.poetry.group.dev.dependencies]
black = "=23.12.1"
flake8 = "=6.1.0"
isort = "=5.13.2"
coverage = "=7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
